# repository-template-generator

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYING.md  README.md  docker-compose.dev.yml  docker-compose.yml  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
client/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js  vitest.config.js
client/src/: App.jsx  api.js  index.css  main.jsx  store.js
deployment/: DEPLOYING.md  docker-compose.dev.yml  docker-compose.yml
docs/claude_logs/: DECISION_LOG.md
docs/planning/: ITER_01.md  ITER_02.md  ITER_03.md  ITER_04.md  ITER_05.md  ITER_06.md  ITER_07.md  ITER_08.md  ITER_09.md  ITER_10.md  ITER_11.md  ITER_12.md  ITER_13.md  ITER_14.md  ITER_15.md  ITER_16.md  ITER_17.md  ITER_18.md  ITER_19.md  ITER_20.md  ITER_21.md  ITER_22.md  ITER_23.md  ITER_24.md  SKELETON.md
docs/user-manual/: 06-templates.md  (+10 more)
scripts/: eval.js
server/: .env.example  Dockerfile  app.js  index.js  logger.js  package.json  vitest.config.js
templates/: README.md
templates/django-postgres/: .env.example  pyproject.toml  template.json
templates/django-postgres/api/: models.py  urls.py  views.py
templates/django-postgres/config/: settings.py
templates/django-postgres/deploy/: Dockerfile  docker-compose.yml
templates/django-postgres/deploy/.github/workflows/: ci.yml
templates/django-postgres/tests/: test_health.py
templates/flask-postgres/: .env.example  pyproject.toml  template.json
templates/flask-postgres/deploy/: Dockerfile
templates/flask-postgres/src/app/: __init__.py  config.py  models.py  routes.py
templates/flask-postgres/tests/: conftest.py
templates/python-cli/: pyproject.toml  template.json
templates/python-cli/deploy/.github/workflows/: ci.yml
templates/python-cli/src/app/: cli.py
templates/python-cli/tests/: test_cli.py
templates/python-worker/: .env.example  pyproject.toml  template.json
templates/python-worker/deploy/: Dockerfile  docker-compose.yml
templates/python-worker/deploy/.github/workflows/: ci.yml
templates/python-worker/src/worker/: config.py  main.py  tasks.py
templates/python-worker/tests/: test_tasks.py
templates/rust-axum-api/: .env.example  Cargo.toml  template.json
templates/rust-axum-api/deploy/: Dockerfile  docker-compose.yml
templates/rust-axum-api/deploy/.github/workflows/: ci.yml
templates/rust-axum-api/src/: main.rs  routes.rs
(+242 files in other folders)
