[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
{{PROJECT_NAME}} = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
